wrapped call to /observations action
